# sentinel

./: .env.example  .gitignore  LICENSE  README.md  SENTINEL.md  docker-compose.yml  render.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: checkpointer.py  graph.py  state.py
backend/app/agent/nodes/: analyzer.py  classifier.py  human_review.py  notifier.py  reporter.py  scanner.py  ticket_creator.py
backend/app/api/: deps.py
backend/app/api/routes/: approvals.py  scans.py  stream.py
backend/app/db/: client.py  models.py
backend/app/mcp/: server.py
backend/app/rag/: embedder.py  retriever.py
backend/app/services/: github_service.py  notification_service.py  scanner_service.py
backend/app/utils/: background.py  security.py  streaming.py
backend/scripts/: seed_vuln_knowledge.py  test_hitl.py
backend/tests/: conftest.py  test_api.py  test_graph.py  test_mcp_server.py  test_scanner.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/[scanId]/: page.tsx
frontend/components/: approval-panel.tsx  finding-card.tsx  graph-status.tsx  recent-scans-strip.tsx  scan-input.tsx  scan-status-badge.tsx  severity-badge.tsx  site-header.tsx  stream-viewer.tsx
frontend/hooks/: use-approval.ts  use-scan-stream.ts
frontend/lib/: api.ts  scan-history.ts  sse.ts  types.ts
