[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sentinel-backend"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
exclude = ["scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]